<resources>
    <string name="app_name">WomenRana</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="maps_api_key">AIzaSyCjAU2zcjg-xAKNz7lH1JrVNcI-7TITEfk</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="dashboard">Dashboard</string>
    <string name="contacts">Contacts</string>
    <string name="devices">Devices</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="notification">Notification</string>
    <string name="hello_wr">Hello WR,</string>
    <string name="update">Update:</string>
    <string name="contactsTxt">Contacts:</string>
    <string name="other">Other:</string>
    <string name="yours">Yours</string>
    <string name="record_location">Record Location</string>
    <string name="emergency_procedures">Emergency Procedures</string>
    <string name="report">Report</string>
    <string name="campus">Campus</string>
    <string name="emergency">Emergency</string>
    <string name="fake_audio">Fake Audio</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="keychain">Keychain</string>
    <string name="devicestxt">Devices:</string>
    <string name="input_message">Input Message:</string>
    <string name="campus_contacts">Campus Contacts:</string>
    <string name="safety_escort">Safety Escort</string>
    <string name="_858_534_9255">(858) 534-9255</string>
    <string name="general_emergency">General Emergency:</string>
    <string name="ucsd_pd">UCSD PD</string>
    <string name="_858_534_4361">(858) 534-4361</string>
    <string name="_858_534_4357">(858)534-4357</string>
    <string name="fake">fake</string>

</resources>